YAML-Files/frontend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
        - name: counter-backend
          image: ghcr.io/doctorprogrammer/counter-frontend:v1
          ports:
            - containerPort: 3000
